--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
+  "author": "David Christie",
   "dependencies": {
+    "next": "^1.2.3",
+    "next-redux-wrapper": "^1.0.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "standard": "^9.0.1"
   },
   "name": "housing-calculator",
-  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/davidchristie/housing-calculator.git"
