--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "David Christie",
   "dependencies": {
+    "express": "^4.15.2",
     "next": "^1.2.3",
     "next-redux-wrapper": "^1.0.0",
     "react": "^15.4.2",
@@ -13,6 +14,7 @@
     "standard": "^9.0.1"
   },
   "name": "housing-calculator",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/davidchristie/housing-calculator.git"
