--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "David Christie",
   "dependencies": {
     "express": "^4.15.2",
-    "next": "^1.2.3",
+    "next": "^2.0.0-beta",
     "next-redux-wrapper": "^1.0.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
